--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@
     border: none;
     border-radius: 5px;
   }
+  .upload-img-btn {
+    background: #5F9EA0;
+    color: white;
+    z-index: 9; 
+    top: 35px;
+    right: 5px;
+  }
   .error {
     width: 92%; 
     margin: 0px auto; 
@@ -104,32 +111,4 @@
 	font-size: 1.5em;
 }
 
-form button { margin: 5px 0px; }
-textarea { display: block; margin-bottom: 10px; }
-/*post*/
-.post { border: 1px solid #ccc; margin-top: 10px; }
-/*comments*/
-.comments-section { margin-top: 10px; border: 1px solid #ccc; }
-.comment { margin-bottom: 10px; }
-.comment .comment-name { font-weight: bold; }
-.comment .comment-date {
-	font-style: italic;
-	font-size: 0.8em;
-}
-.comment .reply-btn, .edit-btn { font-size: 0.8em; }
-.comment-details { width: 91.5%; float: left; }
-.comment-details p { margin-bottom: 0px; }
-.comment .profile_pic {
-	width: 35px;
-	height: 35px;
-	margin-right: 5px;
-	float: left;
-	border-radius: 50%;
-}
-/*replies*/
-.reply { margin-left: 30px; }
-.reply_form {
-	margin-left: 40px;
-	display: none;
-}
-#comment_form { margin-top: 10px; }
+
